Update API naming
